--- a/themes/crisp/layouts/partials/header.html
+++ b/themes/crisp/layouts/partials/header.html
@@ -78,10 +78,10 @@
     </head>
     <body>
         <header id="header">
-            <a id="logo" href="{{ .Site.BaseURL }}"><img src="https://www.gravatar.com/avatar/d2a91c44a7aa986a3fdc711514893726?size=400" alt="{{ .Site.Title }}" /></a>
+            <center><a id="logo" href="{{ .Site.BaseURL }}"><img src="http://img3.doubanio.com/icon/ul2861147-7.jpg" alt="{{ .Site.Title }}" /></a>
             <h1><a href="{{.Site.BaseURL}}">{{.Site.Title}}</a></h1>
             <p>{{.Description}}</p>
 
             {{ partial "follow.html" . }}
-            {{ partial "navigation.html" . }}
+            {{ partial "navigation.html" . }}</center>
         </header>
